add summary and eda

--- a/notebooks/01-la-processing.ipynb
+++ b/notebooks/01-la-processing.ipynb
@@ -36,10 +36,11 @@
     "    * Dropped all entries in which the result is 'bye' or one of two outlier matches\n",
     "    * Extracted winners' and losers' names, countries and seeds from `player column`\n",
     "\n",
-    "EDA\n",
+    "EDA:\n",
     "\n",
     "* Found some dirty data by looking at the (new) columns `games_winner` and `games_loser`. For the purposes of this project, I left them in as I all I need to know is who won or lost.\n",
-    "* "
+    "* Looked at player's win percentages. Many of the players with high win percentages are great players' of the game, but there are a few people who surprisingly feature highly via this metric.\n",
+    "* Looked at some stats grouped by seed. Found that in matches between 1st and 2nd seed, 1st seeds wins around 65% of the time."
    ]
   },
   {
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf6da75",
+   "id": "d2574fca",
    "metadata": {},
    "source": [
     "## EDA"
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2885da53",
+   "id": "eb6a3742",
    "metadata": {},
    "source": [
     "#### Explore games score"
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87cbfb1c",
+   "id": "3fe98f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab4c89d0",
+   "id": "aac556a0",
    "metadata": {},
    "source": [
     "We see that there is some dirty data here. Lets explore and find out."
@@ -607,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4394cea5",
+   "id": "e558dfef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0c74bd5",
+   "id": "fe1749c4",
    "metadata": {},
    "source": [
     "It looks like the majority of them must be data entry mistakes. E.g. the first entry here shows scores of 1-9, 9-1, 10-8, 9-5, 9-0, so a game score of 4-1. It is likely that one of the points scores were entered the wrong way around and the correct score should be 3-2.\n",
@@ -634,7 +635,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29661b0d",
+   "id": "65515d43",
    "metadata": {},
    "source": [
     "#### Explore loser_name and winner_name"
@@ -643,7 +644,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "360ff216",
+   "id": "57c8f6bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b03be22a",
+   "id": "771197b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e349c5fb",
+   "id": "4cccc153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29b27ae",
+   "id": "f04e7509",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d74c86",
+   "id": "556e5ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b87f3e9",
+   "id": "ad00d67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55b507df",
+   "id": "9594bbe4",
    "metadata": {},
    "source": [
     "#### Explore loser_seed and winner_seed"
@@ -727,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "842d9f4c",
+   "id": "8388f756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752fbe66",
+   "id": "3412378d",
    "metadata": {},
    "source": [
     "There are too many entries to be useful. I will instead search for particular examples."
@@ -745,38 +746,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6310c3",
+   "id": "44a0eb33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_summaries_by_seed(seeds, null=False):\n",
+    "def calculate_summaries_by_seed(df, seeds, null=False):\n",
     "    \"\"\"\n",
     "    Calculate summary stats for a list/set of seeds.\n",
     "    \"\"\"\n",
-    "    indices = matches.winner_seed.isin(seeds) & matches.loser_seed.isin(seeds)\n",
+    "    indices = df.winner_seed.isin(seeds) & df.loser_seed.isin(seeds)\n",
     "    \n",
     "    if null:\n",
-    "        null_loss = matches.winner_seed.isin(seeds) & matches.loser_seed.isnull()\n",
-    "        null_win = matches.winner_seed.isnull() & matches.loser_seed.isin(seeds)\n",
+    "        null_loss = df.winner_seed.isin(seeds) & df.loser_seed.isnull()\n",
+    "        null_win = df.winner_seed.isnull() & df.loser_seed.isin(seeds)\n",
     "        indices = indices | null_loss | null_win\n",
     "    \n",
-    "    return matches[indices].groupby(['winner_seed', 'loser_seed'], dropna=False).size()"
+    "    return df[indices].groupby(['winner_seed', 'loser_seed'], dropna=False).size()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9617ea",
+   "id": "866e1950",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_summaries_by_seed(['1','2'])"
+    "calculate_summaries_by_seed(matches, ['1','2'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d593940d",
+   "id": "bb6651a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,27 +787,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "315f33af",
+   "id": "79aa3aa4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_summaries_by_seed(['1', '2','3', '4'])"
+    "calculate_summaries_by_seed(matches, ['1', '2','3', '4'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad99fe0",
+   "id": "ff5af1eb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_summaries_by_seed(['1'], null=True)"
+    "calculate_summaries_by_seed(matches, ['1'], null=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48df2af3",
+   "id": "364c36e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,17 +817,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51c85af",
+   "id": "2b4b5856",
    "metadata": {},
    "outputs": [],
    "source": [
-    "calculate_summaries_by_seed(['2'], null=True)"
+    "calculate_summaries_by_seed(matches, ['2'], null=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce1b642a",
+   "id": "113c203b",
    "metadata": {},
    "outputs": [],
    "source": [
