add tuning for K

--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_ratings(player_ratings, winner_name, loser_name):\n",
+    "def update_ratings(player_ratings, winner_name, loser_name, K=32):\n",
     "    \"\"\"\n",
     "    Update ratings based on a single new result.\n",
     "\n",
@@ -152,6 +152,8 @@
     "        dictionary of player ratings\n",
     "    winner_name, loser_name: str,\n",
     "        name of winner and loser\n",
+    "    K: float, default 32\n",
+    "        Constant that determines how much the ratings are adjusted.\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -174,7 +176,7 @@
     "    predicted_score = calculate_predicted_score(rating_winner_old, rating_loser_old)\n",
     "\n",
     "    rating_winner_new, rating_loser_new = calculate_new_ratings(\n",
-    "        rating_winner_old, rating_loser_old, predicted_score\n",
+    "        rating_winner_old, rating_loser_old, predicted_score, K=K\n",
     "    )\n",
     "    \n",
     "    player_ratings[winner_name] = rating_winner_new\n",
@@ -215,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_elo(matches: pd.DataFrame, player_ratings={}) -> pd.DataFrame:\n",
+    "def calculate_elo(matches: pd.DataFrame, K=32, player_ratings={}) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Calculate elo ratings for all players and match history from\n",
     "    the matches input.\n",
@@ -258,7 +260,7 @@
     "            rating_loser_old,\n",
     "            rating_loser_new,\n",
     "            predicted_score,\n",
-    "        ) = update_ratings(player_ratings, winner_name, loser_name)\n",
+    "        ) = update_ratings(player_ratings, winner_name, loser_name, K=K)\n",
     "        \n",
     "        ratings_winner_old.append(rating_winner_old)\n",
     "        ratings_winner_new.append(rating_winner_new)\n",
@@ -338,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "view_player_history(df, 'Ramy Ashour')"
+    "view_player_history(matches, 'Ramy Ashour')"
    ]
   },
   {
@@ -389,11 +391,147 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7a732a",
+   "id": "5e5c3959",
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_calibration(df)"
+    "evaluate_calibration(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e767307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_calibration_seeds(df: pd.DataFrame, seeds, N: int = 2, null=False):\n",
+    "    \"\"\"\n",
+    "    carry out calibration for only those \n",
+    "    \"\"\"\n",
+    "    indices = df.winner_seed.isin(seeds) & df.loser_seed.isin(seeds)\n",
+    "    \n",
+    "    if null:\n",
+    "        null_loss = df.winner_seed.isin(seeds) & df.loser_seed.isnull()\n",
+    "        null_win = df.winner_seed.isnull() & df.loser_seed.isin(seeds)\n",
+    "        indices = indices | null_loss | null_win\n",
+    "    \n",
+    "    return evaluate_calibration(df[indices])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4a2178",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_calibration_seeds(matches, ['1','2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7a91af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_calibration_seeds(matches, ['1'], null=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40242aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate_calibration_seeds(matches, ['2'], null=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dfc5041",
+   "metadata": {},
+   "source": [
+    "## Tuning for K\n",
+    "Looking at the above, we see that the predicted_scores are generally underconfident. This suggests that the ELO rating is not updating enough after each game, i.e. that K is too small. Hence, I will try various values of K and see which one gets better evaluations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c000db4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_full_analysis(file=dir_processed+\"matches.csv\", K=32):\n",
+    "    matches = pd.read_csv(dir_processed+\"matches.csv\", index_col=0)\n",
+    "    _, matches = calculate_elo(matches, K=K)\n",
+    "    return evaluate_calibration(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4886d54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=10\n",
+    "do_full_analysis(K=K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2e806d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=50\n",
+    "do_full_analysis(K=K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20dfd4bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=100\n",
+    "do_full_analysis(K=K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f3c0297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=200\n",
+    "do_full_analysis(K=K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "049da4a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K=500\n",
+    "do_full_analysis(K=K)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32596dc",
+   "metadata": {},
+   "source": [
+    "Based on the above, it looks like K=100 is a good value for K."
    ]
   }
  ],
