tweak section names and docstrings

--- a/notebooks/01-la-processing.ipynb
+++ b/notebooks/01-la-processing.ipynb
@@ -1,24 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f44dbb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "%config InlineBackend.figure_format = \"retina\"\n",
-    "\n",
-    "import os\n",
-    "import re\n",
-    "from tqdm.notebook import tqdm"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bbf93bdb",
    "metadata": {},
@@ -33,13 +15,14 @@
     "* matches_male.csv.\n",
     "    * Dropped the columns `tournament_index` and `round`\n",
     "    * Categorized the `result` column and extracted the score in games from this\n",
-    "    * Dropped all entries in which the result is 'bye' or one of two outlier matches\n",
+    "    * Dropped all entries in which the result is 'bye'\n",
+    "    * Dropped two outlier matches in which there was no winner of the match\n",
     "    * Extracted winners' and losers' names, countries and seeds from `player column`\n",
     "\n",
     "EDA:\n",
     "\n",
     "* Found some dirty data by looking at the (new) columns `games_winner` and `games_loser`. For the purposes of this project, I left them in as I all I need to know is who won or lost.\n",
-    "* Looked at player's win percentages. Many of the players with high win percentages are great players' of the game, but there are a few people who surprisingly feature highly via this metric.\n",
+    "* Looked at players' win percentages. Many of the players with high win percentages are great players' of the game, but there are a few people who surprisingly feature highly via this metric.\n",
     "* Looked at some stats grouped by seed. Found that in matches between 1st and 2nd seed, 1st seeds wins around 65% of the time."
    ]
   },
@@ -48,7 +31,25 @@
    "id": "ca6efc52",
    "metadata": {},
    "source": [
-    "### Load data"
+    "### Setup and loading data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "019ede01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%config InlineBackend.figure_format = \"retina\"\n",
+    "\n",
+    "import os\n",
+    "import re\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -108,6 +109,7 @@
    "id": "2a957457",
    "metadata": {},
    "source": [
+    "### tournaments dataframe\n",
     "For the aim of the project, this tournament dataframe is not necessary so I will not explore it further"
    ]
   },
@@ -116,7 +118,7 @@
    "id": "16a524f7",
    "metadata": {},
    "source": [
-    "### `tournament_index` and `round`"
+    "### matches dataframe, `tournament_index` and `round`"
    ]
   },
   {
@@ -126,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# drop tournament index as we do not need tournament information for elo\n",
+    "# drop tournament index as we do not need tournament information\n",
     "matches = matches.drop(columns=[\"tournament_index\"])"
    ]
   },
@@ -155,7 +157,7 @@
    "id": "503559ee",
    "metadata": {},
    "source": [
-    "We can see that the round column is a little bit dirty. However, like tournament index, it is actually not useful for us so I decided to drop it."
+    "We can see that the round column is dirty. However, like tournament index, it is actually not useful for us so I decided to drop it."
    ]
   },
   {
@@ -163,7 +165,7 @@
    "id": "9824e007",
    "metadata": {},
    "source": [
-    "### `result`, extracting information from results column\n",
+    "### matches dataframe, extracting information from `result` column\n",
     "\n",
     "The next few functions took several iterations and experimentation to create. I did not record the process by which I incrementally improved the function."
    ]
@@ -176,6 +178,24 @@
    "outputs": [],
    "source": [
     "def determine_result_type(result: str) -> (str):\n",
+    "    \"\"\"\n",
+    "    Determine the type of result `result` is.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    result : str\n",
+    "        raw data from result column of matches dataframe\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        The type of result if the input `result` matches one\n",
+    "        of the known types, otherwise returns None and prints\n",
+    "        `result`. The known types are: \"bye\", \"wo\", \"ret\",\n",
+    "        \"unknown\", \"other\", \"3/\", \"2/\" and \"points\". See the\n",
+    "        code for what each of these mean.\n",
+    "        \n",
+    "    \"\"\"\n",
     "    if \"bye\" in result:\n",
     "        return \"bye\"\n",
     "\n",
@@ -202,15 +222,14 @@
     "        # then result is of the form \"2/i\" or \"2/i (15m)\" where i=0,1\n",
     "        return \"2/\"\n",
     "\n",
-    "    # pattern should match '11-3, 4-11, 11-9 (44m)'\n",
+    "    # pattern should match something like '11-3, 4-11, 11-9 (44m)'\n",
     "    pat = r\"(?P<points>[\\d, -]+\\d)(?: \\((?P<time>\\d+)m\\))?\"\n",
     "    if re.match(pat, result):\n",
     "        return \"points\"\n",
     "\n",
     "    # if none of the above conditions were met, then\n",
     "    # want to see what it is\n",
-    "    if True:\n",
-    "        print(result)"
+    "    print(result)"
    ]
   },
   {
@@ -242,7 +261,7 @@
     "    ----------\n",
     "    points : str\n",
     "        The points in each game of a match. Should be something\n",
-    "        like '11-8, 7-11, 11-9, 12-10'\n",
+    "        like \"11-8, 7-11, 11-9, 12-10\"\n",
     "        * points for each game separated by ', '\n",
     "        * points of players in a single game separated by '-'\n",
     "        * in each game, the first number is the points of the\n",
@@ -364,7 +383,7 @@
    "id": "b8054557",
    "metadata": {},
    "source": [
-    "## `players`, extracting information"
+    "## matches dataframe, `players`, extracting information"
    ]
   },
   {
@@ -504,7 +523,7 @@
    "source": [
     "def split_player_info(df, column: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Split the winner or loser column into seed, name and country.\n",
+    "    Split winner or loser column to seed, name and country columns.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
@@ -517,10 +536,11 @@
     "    Returns\n",
     "    -------\n",
     "    pd.DataFrame\n",
-    "        new dataframe with three additional columns:\n",
-    "        * {column}_name\n",
-    "        * {column}_country\n",
-    "        * {column}_seed\n",
+    "        new dataframe which is copy of input `df` with\n",
+    "        three additional columns:\n",
+    "        * \"{column}_name\"\n",
+    "        * \"{column}_country\"\n",
+    "        * \"{column}_seed\"\n",
     "    \"\"\"\n",
     "    df_copy = df.copy()\n",
     "    player_info = df_copy[column].to_list()\n",
@@ -558,7 +578,7 @@
    "id": "618edaac",
    "metadata": {},
    "source": [
-    "## Reorder so it is chronological"
+    "## matches dataframe, reorder so it is chronological"
    ]
   },
   {
