add summary, tweak docstrings, function names

--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e64117de",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "In this notebook, I create and run functions to:\n",
+    "* create the ELO ratings\n",
+    "* measure the performance of ELO ratings\n",
+    "\n",
+    "Using default value for the hyper-parameter `K` of 32, we see that the predictions from ELO are under-confident: if the ELO rating predicts that a player will win 80%, they actually win about 90% of the time. Similarly for other percentages. After doing a (manual) gridsearch, we see that `K=100` gives predictions that are calibrated."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa3a68dd",
+   "metadata": {},
+   "source": [
+    "### Setup and data loading\n",
+    "\n",
+    "The data that is loaded is the outcome of running the notebook `01-la-processing.ipynb`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a72ce745",
@@ -40,6 +64,16 @@
    "outputs": [],
    "source": [
     "matches.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9860a5f1",
+   "metadata": {},
+   "source": [
+    "### ELO analysis\n",
+    "\n",
+    "Define and run the various functions to carry out and evaluate the elo rating system."
    ]
   },
   {
@@ -84,12 +118,13 @@
     "    K: float = 32,\n",
     ") -> (float, float):\n",
     "    \"\"\"\n",
-    "    Calculate new elo ratings.\n",
+    "    Calculate new elo ratings after a single match.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    rating_winner, rating_loser: float\n",
-    "        ELO ratings of the winner and loser, respectively.\n",
+    "        ELO ratings of the winner and loser, respectively, before\n",
+    "        the match took place.\n",
     "    predicted_score: float in range [0, 1]\n",
     "        The expected score of the winner of the match.\n",
     "    K: float, default 32\n",
@@ -138,13 +173,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update_ratings(player_ratings, winner_name, loser_name, K=32):\n",
+    "def update_ratings_single(player_ratings, winner_name, loser_name, K=32):\n",
     "    \"\"\"\n",
     "    Update ratings based on a single new result.\n",
     "\n",
-    "    If winner or loser is not already in the player_ratings\n",
-    "    dictionary, then a fresh entry with a rating of 1500 is\n",
-    "    created.\n",
+    "    If winner_name or loser_name is not already in the\n",
+    "    player_ratings dictionary, then a fresh entry with a rating\n",
+    "    of 1500 is created before updating based on new results.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
@@ -203,9 +238,9 @@
     "\n",
     "test_ratings = {'a': 1000, 'b': 900}\n",
     "\n",
-    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'a', 'b')\n",
-    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'c', 'd')\n",
-    "test_ratings, _, _, _, _, _ = update_ratings(test_ratings, 'd', 'c')\n",
+    "test_ratings, _, _, _, _, _ = update_ratings_single(test_ratings, 'a', 'b')\n",
+    "test_ratings, _, _, _, _, _ = update_ratings_single(test_ratings, 'c', 'd')\n",
+    "test_ratings, _, _, _, _, _ = update_ratings_single(test_ratings, 'd', 'c')\n",
     "\n",
     "test_ratings"
    ]
@@ -217,17 +252,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_elo(matches: pd.DataFrame, K=32, player_ratings={}) -> pd.DataFrame:\n",
+    "def update_ratings(matches: pd.DataFrame, K=32, player_ratings={}) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Calculate elo ratings for all players and match history from\n",
-    "    the matches input.\n",
+    "    Update elo ratings based on all match results in `matches`.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    matches: pd.DataFrame\n",
     "        dataframe of match history\n",
+    "    K: float, default 32\n",
+    "        Constant that determines how much the ratings are adjusted\n",
     "    player_ratings: Dict[str, float]\n",
-    "        dictionary of players' elo ratings\n",
+    "        dictionary of players' elo ratings before the matches\n",
+    "        in `matches` were played\n",
     "\n",
     "    Returns\n",
     "    -------\n",
@@ -260,7 +297,7 @@
     "            rating_loser_old,\n",
     "            rating_loser_new,\n",
     "            predicted_score,\n",
-    "        ) = update_ratings(player_ratings, winner_name, loser_name, K=K)\n",
+    "        ) = update_ratings_single(player_ratings, winner_name, loser_name, K=K)\n",
     "        \n",
     "        ratings_winner_old.append(rating_winner_old)\n",
     "        ratings_winner_new.append(rating_winner_new)\n",
@@ -284,7 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "player_ratings, matches = calculate_elo(matches)\n",
+    "player_ratings, matches = update_ratings(matches)\n",
     "matches.head()"
    ]
   },
@@ -299,19 +336,19 @@
     "    \"\"\"\n",
     "    View all results of a player.\n",
     "    \n",
-    "    Prints the following for all games that player played in:\n",
+    "    Prints the following for all games that `player` played:\n",
     "    * name of winner\n",
     "    * name of loser\n",
-    "    * winners elo rating (before the match)\n",
-    "    * losers elo rating (before the match)\n",
-    "    * winners seed in the tournament\n",
-    "    * losers seed in the tournament\n",
+    "    * winner's elo rating (before the match)\n",
+    "    * loser's elo rating (before the match)\n",
+    "    * winner's seed in the tournament\n",
+    "    * loser's seed in the tournament\n",
     "    * predicted score from elo ratings for the match\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    df\n",
-    "        dataframe of matches as outputted by calculate_elo\n",
+    "        dataframe of matches as outputted by `update_ratings`\n",
     "    player: str\n",
     "        name of the player\n",
     "    \n",
@@ -407,7 +444,7 @@
    "source": [
     "def evaluate_calibration_seeds(df: pd.DataFrame, seeds, N: int = 2, null=False):\n",
     "    \"\"\"\n",
-    "    carry out calibration for only those \n",
+    "    Evaluate calibration of ratings for players' whose seed is in `seeds`\n",
     "    \"\"\"\n",
     "    indices = df.winner_seed.isin(seeds) & df.loser_seed.isin(seeds)\n",
     "    \n",
@@ -455,7 +492,7 @@
    "metadata": {},
    "source": [
     "## Tuning for K\n",
-    "Looking at the above, we see that the predicted_scores are generally underconfident. This suggests that the ELO rating is not updating enough after each game, i.e. that K is too small. Hence, I will try various values of K and see which one gets better evaluations."
+    "Looking at the above, we see that the predicted_scores are underconfident: the predicted scores are generally smaller than the observed scores. This suggests that the ELO rating is not updating enough after each game, i.e. that K is too small. Hence, I will try various values of K and see which gives better calibrated results."
    ]
   },
   {
@@ -467,7 +504,7 @@
    "source": [
     "def do_full_analysis(file=dir_processed+\"matches.csv\", K=32):\n",
     "    matches = pd.read_csv(dir_processed+\"matches.csv\", index_col=0)\n",
-    "    _, matches = calculate_elo(matches, K=K)\n",
+    "    _, matches = update_ratings(matches, K=K)\n",
     "    return evaluate_calibration(matches)"
    ]
   },
