fix processed directory variable

--- a/notebooks/01-la-processing.ipynb
+++ b/notebooks/01-la-processing.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "dir_raw = \"../data/raw/\"\n",
-    "dir_processed = \"../data/processed\""
+    "dir_processed = \"../data/processed/\""
    ]
   },
   {
