--- a/notebooks/02-la-analysis.ipynb
+++ b/notebooks/02-la-analysis.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_processed = \"../data/processed\""
+    "dir_processed = \"../data/processed/\""
    ]
   },
   {
